# pkg/ocp-user-api/ocp-user-api.pb.validate.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
 // source: api/ocp-user-api/ocp-user-api.proto
 
-package oct_user_api
+package ocp_user_api
 
 import (
 	"bytes"
@@ -126,6 +126,8 @@ func (m *ListUsersV1Response) Validate() error {
 		}
 
 	}
+
+	// no validation rules for NextOffset
 
 	return nil
 }
@@ -619,6 +621,383 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = DescribeUserV1ResponseValidationError{}
+
+// Validate checks the field values on MultiCreateUserV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateUserV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetUsers() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return MultiCreateUserV1RequestValidationError{
+					field:  fmt.Sprintf("Users[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MultiCreateUserV1RequestValidationError is the validation error returned by
+// MultiCreateUserV1Request.Validate if the designated constraints aren't met.
+type MultiCreateUserV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateUserV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateUserV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateUserV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateUserV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateUserV1RequestValidationError) ErrorName() string {
+	return "MultiCreateUserV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateUserV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateUserV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateUserV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateUserV1RequestValidationError{}
+
+// Validate checks the field values on MultiCreateUserV1Response with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateUserV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Count
+
+	return nil
+}
+
+// MultiCreateUserV1ResponseValidationError is the validation error returned by
+// MultiCreateUserV1Response.Validate if the designated constraints aren't met.
+type MultiCreateUserV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateUserV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateUserV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateUserV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateUserV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateUserV1ResponseValidationError) ErrorName() string {
+	return "MultiCreateUserV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateUserV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateUserV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateUserV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateUserV1ResponseValidationError{}
+
+// Validate checks the field values on UpdateUserV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *UpdateUserV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for UserId
+
+	if v, ok := interface{}(m.GetUserParams()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return UpdateUserV1RequestValidationError{
+				field:  "UserParams",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// UpdateUserV1RequestValidationError is the validation error returned by
+// UpdateUserV1Request.Validate if the designated constraints aren't met.
+type UpdateUserV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UpdateUserV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UpdateUserV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UpdateUserV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UpdateUserV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UpdateUserV1RequestValidationError) ErrorName() string {
+	return "UpdateUserV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UpdateUserV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUpdateUserV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UpdateUserV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UpdateUserV1RequestValidationError{}
+
+// Validate checks the field values on UpdateUserV1Response with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *UpdateUserV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Updated
+
+	return nil
+}
+
+// UpdateUserV1ResponseValidationError is the validation error returned by
+// UpdateUserV1Response.Validate if the designated constraints aren't met.
+type UpdateUserV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UpdateUserV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UpdateUserV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UpdateUserV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UpdateUserV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UpdateUserV1ResponseValidationError) ErrorName() string {
+	return "UpdateUserV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UpdateUserV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUpdateUserV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UpdateUserV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UpdateUserV1ResponseValidationError{}
+
+// Validate checks the field values on UserParams with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *UserParams) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for CalendarId
+
+	// no validation rules for ResumeId
+
+	if v, ok := interface{}(m.GetProfile()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return UserParamsValidationError{
+				field:  "Profile",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// UserParamsValidationError is the validation error returned by
+// UserParams.Validate if the designated constraints aren't met.
+type UserParamsValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UserParamsValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UserParamsValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UserParamsValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UserParamsValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UserParamsValidationError) ErrorName() string { return "UserParamsValidationError" }
+
+// Error satisfies the builtin error interface
+func (e UserParamsValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUserParams.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UserParamsValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UserParamsValidationError{}
 
 // Validate checks the field values on UserProfile with the rules defined in
 // the proto definition for this message. If any rules are violated, an error
