# swagger/api.swagger.json
@@ -49,12 +49,12 @@
         ]
       },
       "post": {
-        "operationId": "OcpUserApi_CreateUserV1",
+        "operationId": "OcpUserApi_MultiCreateUserV1",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/apiCreateUserV1Response"
+              "$ref": "#/definitions/apiMultiCreateUserV1Response"
             }
           },
           "default": {
@@ -69,7 +69,7 @@
         ]
       }
     },
-    "/v1/users/{user_id}": {
+    "/v1/users/{userId}": {
       "get": {
         "operationId": "OcpUserApi_DescribeUserV1",
         "responses": {
@@ -88,7 +88,7 @@
         },
         "parameters": [
           {
-            "name": "user_id",
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string",
@@ -117,7 +117,36 @@
         },
         "parameters": [
           {
-            "name": "user_id",
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpUserApi"
+        ]
+      },
+      "post": {
+        "operationId": "OcpUserApi_UpdateUserV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiUpdateUserV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string",
@@ -134,7 +163,7 @@
     "apiCreateUserV1Response": {
       "type": "object",
       "properties": {
-        "user_id": {
+        "userId": {
           "type": "string",
           "format": "uint64"
         }
@@ -156,6 +185,19 @@
           "items": {
             "$ref": "#/definitions/apiUser"
           }
+        },
+        "nextOffset": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "apiMultiCreateUserV1Response": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -167,6 +209,14 @@
         }
       }
     },
+    "apiUpdateUserV1Response": {
+      "type": "object",
+      "properties": {
+        "updated": {
+          "type": "boolean"
+        }
+      }
+    },
     "apiUser": {
       "type": "object",
       "properties": {
@@ -174,11 +224,27 @@
           "type": "string",
           "format": "uint64"
         },
-        "calendar_id": {
+        "calendarId": {
           "type": "string",
           "format": "uint64"
         },
-        "resume_id": {
+        "resumeId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "profile": {
+          "$ref": "#/definitions/apiUserProfile"
+        }
+      }
+    },
+    "apiUserParams": {
+      "type": "object",
+      "properties": {
+        "calendarId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "resumeId": {
           "type": "string",
           "format": "uint64"
         },
